...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DnC-vp-4SQ">
                                        <rect key="frame" x="6" y="31.5" width="363" height="25"/>
                                        <accessibility key="accessibilityConfiguration" identifier="songTitleFieldIndentifier"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V90-gz-yln">
                                        <rect key="frame" x="6" y="95" width="363" height="24.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="artistNameFieldIdentifier"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8vn-nv-D8x">
                                        <rect key="frame" x="6" y="158.5" width="363" height="24.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="reasonAddedFieldIdentifier"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="em9-3G-qr0">
                                        <rect key="frame" x="6" y="221.5" width="363" height="25"/>
                                        <accessibility key="accessibilityConfiguration" identifier="durationFieldIdentfier"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EYO-tJ-VTl">
                                        <rect key="frame" x="141.5" y="253.5" width="92" height="24.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="doneButtonIdentifier"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <state key="normal" title="Display Titles"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" semanticContentAttribute="spatial" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w4Y-oW-wDE">
                                        <rect key="frame" x="6" y="32.5" width="363" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="currentTimeFieldIdentifier"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LU4-0Z-5fQ">
                                        <rect key="frame" x="115.5" y="74.5" width="144" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="displayCurrentTimeIdentifier"/>
                                        <state key="normal" title="Display Current Time"/>
                                        <connections>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gdL-au-On1">
                                        <rect key="frame" x="129" y="116.5" width="117" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="startSongTimerButtonIdentifier"/>
                                        <state key="normal" title="Start Song Timer"/>
                                        <connections>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCw-lk-YTY">
                                        <rect key="frame" x="110" y="158.5" width="155" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="hideFirstTwoButtonsIdentifier"/>
                                        <state key="normal" title="Hide First Two Buttons"/>
                                        <connections>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nrg-WM-MFV">
                                        <rect key="frame" x="107" y="200.5" width="161" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="showFirstTwoButtonsIdentifier"/>
                                        <state key="normal" title="Show First Two Buttons"/>
                                        <connections>
...
