...
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="327" height="23"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZ5-3Z-Q1k">
                    <rect key="frame" x="0.0" y="8" width="24.5" height="15"/>
                    <accessibility key="accessibilityConfiguration" identifier="currentTimeIdentifier"/>
                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                    <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" progressImage="ThemeHorizontalButtonBackground" translatesAutoresizingMaskIntoConstraints="NO" id="i6R-oN-McC">
                    <rect key="frame" x="0.0" y="0.0" width="327" height="2"/>
...
                        <accessibilityTraits key="traits" updatesFrequently="YES"/>
                    </accessibility>
                    <color key="trackTintColor" red="0.19149413700000001" green="0.19120746850000001" blue="0.28594568370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                </progressView>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3:26" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ba7-w0-Iph">
                    <rect key="frame" x="300" y="8" width="27" height="15"/>
                    <accessibility key="accessibilityConfiguration" identifier="durationIdentifier"/>
                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                    <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
            </subviews>
            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
